Fix bug on Safari/iOS with dashboard and flex-basis CSS rule

--- a/src/www/dashboard.scss
+++ b/src/www/dashboard.scss
@@ -101,7 +101,6 @@
       article{
         width: 100%;
         overflow: auto;
-        flex-basis: 100%;
         flex-grow: 1;
       }
 
